--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-star-wars",
   "version": "0.1.0",
+  "homepage": "https://evgeniybelaev.github.io/react-star-wars/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
